--- a/aws/vars.yml
+++ b/aws/vars.yml
@@ -6,3 +6,5 @@ default_instance:
   instance_type: t2.micro
   image_id: ami-033b95fb8079dc481  # Amazon Linux 2, 64-bit x86
   key_name: ansibleuser
+  network:
+    assign_public_ip: true
