Update and clean AWS Ansible scripts

--- a/aws/ansible.cfg
+++ b/aws/ansible.cfg
@@ -3,6 +3,7 @@
 [defaults]
 inventory       = ./inventory_aws_ec2.yml
 stdout_callback = debug
+interpreter_python = auto_silent
 
 [inventory]
 enable_plugins = amazon.aws.aws_ec2
