--- a/aws/get-instance-info.yml
+++ b/aws/get-instance-info.yml
@@ -11,7 +11,7 @@
     - name: Get info about instances that match the condition
       amazon.aws.ec2_instance_info:
         filters:
-          'tag:Environment': Demo
+          'tag:Project': '{{ project_name }}'
       register: instance_result
 
     - name: TEMP Debug Print summary about instance cretion
