Update AWS scripts (security group management)

--- a/aws/create-instance.yml
+++ b/aws/create-instance.yml
@@ -44,7 +44,9 @@
         vpc_subnet_id: '{{ subnet_id }}'
         key_name: '{{ key_name }}'
         instance_type: '{{ instance.instance_type }}'
-        security_group: '{{ group_id }}'
+        security_groups:
+          - '{{ group_id }}'
+          - default
         image_id: '{{ instance.image_id }}'
         network: '{{ instance.network }}'
         volumes: '{{ instance.volumes }}'
