--- a/aws/vars.yml
+++ b/aws/vars.yml
@@ -28,7 +28,7 @@ availability_zone: us-east-1a
 
 # EC2 instance parameters.
 instance:
-  instance_type: t3.micro
+  instance_type: t3a.micro
   image_id: ami-033b95fb8079dc481  # Amazon Linux 2, 64-bit x86
   network:
     assign_public_ip: true
@@ -54,3 +54,15 @@ org_tags:
 project_tags:
   Project: '{{ project_name }}'
   Environment: Test
+
+# Ports that will be open for inbound access in a Security Group
+sg_ports:
+  - ports: 22
+    rule_desc: SSH access for all
+    cidr_ip: 0.0.0.0/0
+  - ports: 80
+    rule_desc: HTTP access for all
+    cidr_ip: 0.0.0.0/0
+  - ports: 443
+    rule_desc: HTTPS access for all
+    cidr_ip: 0.0.0.0/0
