--- a/aws/delete-instance.yml
+++ b/aws/delete-instance.yml
@@ -53,7 +53,7 @@
     - name: Print summary about instance deleting
       ansible.builtin.debug:
         msg: |
-          [✔]  Instance deleted.
+          [✔]  Instance(s) deleted.
           [ℹ]  Instance name:   {{ instance_result | json_query("instances[*].tags.Name") | join(", ") }}
           [ℹ]  Instance ID:     {{ instance_result | json_query("instances[*].instance_id") | join(", ") }}
           [ℹ]  Instance type:   {{ instance_result.instances[0].instance_type }}
