Update Fetch Kubernetes

--- a/kubernetes/fetch-kubeconfig.yml
+++ b/kubernetes/fetch-kubeconfig.yml
@@ -7,15 +7,35 @@
 # Do not forget the comma (,) in the inventory paramter (-i)!
 ---
 
-- name: Download kube config files from RKE2 Server
+- name: Download kube config files from Kubernetes Server
   hosts: servers
 
   tasks:
 
+    - name: Detect RKE2 kubeconfig file
+      ansible.builtin.stat:
+        path: /etc/rancher/rke2/rke2.yaml
+      register: rke2_result
+
+    - name: Detect K3S kubeconfig file
+      ansible.builtin.stat:
+        path: /etc/rancher/k3s/k3s.yaml
+      register: k3s_result
+
+    - name: Set the kubeconfig file path to RKE2
+      ansible.builtin.set_fact:
+        kubeconfig: /etc/rancher/rke2/rke2.yaml
+      when: rke2_result.stat.exists
+
+    - name: Set the kubeconfig file path to K3s
+      ansible.builtin.set_fact:
+        kubeconfig: /etc/rancher/k3s/k3s.yaml
+      when: k3s_result.stat.exists
+
     - name: 'Download kube config file from the server {{ ansible_host }}'
       become: true
       ansible.builtin.fetch:
-        src: /etc/rancher/rke2/rke2.yaml
+        src: '{{ kubeconfig }}'
         dest: '~/.kube/{{ ansible_host }}.yml'
         flat: true
 
