Update Longhorn script

--- a/kubernetes/deploy-longhorn.yml
+++ b/kubernetes/deploy-longhorn.yml
@@ -12,17 +12,17 @@
 
   tasks:
 
-    # - name: Install required packages
-    #   become: true
-    #   ansible.builtin.package:
-    #     name: '{{ item }}'
-    #     state: present
-    #   loop:
-    #     - gawk
-    #     - epel-release
-    #     - jq
-    #     - iscsi-initiator-utils
-    #     - nfs-utils
+    - name: Install required packages
+      become: true
+      ansible.builtin.package:
+        name: '{{ item }}'
+        state: present
+      loop:
+        - gawk
+        - epel-release
+        - jq
+        - iscsi-initiator-utils
+        - nfs-utils
 
     - name: Configure iscsi
       become: true
