--- a/kubernetes/ansible.cfg
+++ b/kubernetes/ansible.cfg
@@ -1,6 +1,6 @@
 # ansible.cfg
 
 [defaults]
-inventory       = ./inventory-manual.yml
+inventory       = ./inventory_manual.yml
 stdout_callback = debug
 interpreter_python = auto_silent
