--- a/kubernetes/deploy-rke2-server.yml
+++ b/kubernetes/deploy-rke2-server.yml
@@ -8,9 +8,19 @@
 - name: Deploy Rancher Kubernetes Engine 2 (RKE2) on Server nodes
   hosts: servers
 
+  vars:
+    set_port_forwarding: false
+    rke2_channel: latest    # stable, latest
+
   tasks:
 
-    - name: Set port forwarding
+    - name: Check port forwarding status
+      ansible.builtin.command:
+        cmd: cat /proc/sys/net/ipv4/ip_forward
+      register: forward_result
+      changed_when: forward_result.rc != 0
+
+    - name: Set port forwarding if not enabled
       become: true
       ansible.posix.sysctl:
         name: '{{ item.field }}'
@@ -22,6 +32,9 @@
       loop:
         - { field: net.ipv4.conf.all.forwarding, value: 1 }
         - { field: net.ipv6.conf.all.forwarding, value: 1 }
+      when:
+        - set_port_forwarding
+        - forward_result.stdout != "1"
 
     - name: Download install script
       ansible.builtin.get_url:
@@ -31,8 +44,11 @@
 
     - name: Install RKE2 as a Server
       become: true
+      environment:
+        INSTALL_RKE2_CHANNEL: '{{ rke2_channel }}'
       ansible.builtin.shell:
-        cmd: /tmp/install.sh
+        cmd: '/tmp/install.sh'
+        creates: /usr/bin/rke2
       register: rke2_result
       changed_when:
         - '"Nothing to do" not in rke2_result.stdout'
@@ -40,9 +56,9 @@
     - name: Copy and customize config files
       become: true
       ansible.builtin.template:
-        src: 'templates/{{ item }}'
+        src: 'templates/rke2/{{ item }}'
         dest: '/etc/rancher/rke2/{{ item }}'
-        mode: u=rw,g=r,o=r
+        mode: 'u=rw,g=,o='
       loop:
         - config.yaml
 
@@ -60,6 +76,22 @@
         dest: /usr/bin/kubectl
         state: link
 
+    - name: Create .kube in user's HOME directorydirectory
+      ansible.builtin.file:
+        path: '~/.kube'
+        state: directory
+        mode: 'u=rwx,g=,o='
+
+    - name: Copy kubeconfig file to a user's .kube directory
+      become: true
+      ansible.builtin.copy:
+        src: /etc/rancher/rke2/rke2.yaml
+        dest: /home/{{ ansible_user_id }}/.kube/config
+        owner: '{{ ansible_real_user_id }}'
+        group: '{{ ansible_real_group_id }}'
+        remote_src: true
+        mode: 'u=rw,g=,o='
+
     - name: Get content of token file
       become: true
       ansible.builtin.command: cat /var/lib/rancher/rke2/server/node-token
@@ -68,4 +100,4 @@
 
     - name: Print the RKE2 token
       ansible.builtin.debug:
-        msg: 'Use this token to connect RKE2 Agent notes to this Server: {{ token_file_result.stdout }}'
+        msg: 'Use the following token to connect RKE2 Agent notes to this Server: {{ token_file_result.stdout }}'
