Update scripts Fetch kubeconfig and Deploy Longhorn

--- a/kubernetes/fetch-kubeconfig.yml
+++ b/kubernetes/fetch-kubeconfig.yml
@@ -4,9 +4,8 @@
 # Example usage:
 #    Download kube config file from a remote server
 #      ansible-playbook fetch-kubeconfig -i server.example.com,
-# Do not forget the comma (,) in the inventory paramter (-i)!
----
 
+---
 - name: Download kube config files from Kubernetes Server
   hosts: servers
 
@@ -17,7 +16,7 @@
         path: /etc/rancher/rke2/rke2.yaml
       register: rke2_result
 
-    - name: Detect K3S kubeconfig file
+    - name: Detect K3s kubeconfig file
       ansible.builtin.stat:
         path: /etc/rancher/k3s/k3s.yaml
       register: k3s_result
@@ -39,6 +38,13 @@
         dest: '~/.kube/{{ ansible_host }}.yml'
         flat: true
 
+    - name: Change the access rights for the downloaded file
+      ansible.builtin.file:
+        path: '~/.kube/{{ ansible_host }}.yml'
+        mode: 'u=rw,g=,o='
+      delegate_to: localhost
+      run_once: true
+
     - name: 'Replace default values in downloaded files with hostname: {{ ansible_host }}'
       ansible.builtin.replace:
         path: '~/.kube/{{ ansible_host }}.yml'
@@ -48,3 +54,4 @@
         - 'default'
         - '127.0.0.1'
       delegate_to: localhost
+      run_once: true
