--- a/kubernetes/deploy-longhorn.yml
+++ b/kubernetes/deploy-longhorn.yml
@@ -3,7 +3,6 @@
 
 # Example usage:
 #  ansible-playbook deploy-longhorn.yml -i server.example.com,
-# Do not forget the comma (,) in the inventory paramter (-i)!
 
 ---
 - name: Deploy Longhorn
@@ -42,8 +41,8 @@
       run_once: true
       delegate_to: localhost
       kubernetes.core.helm_repository:
-        name: jetstack
-        repo_url: https://charts.jetstack.io
+        name: longhorn
+        repo_url: https://charts.longhorn.io
 
     - name: Deploy Longhorn
       run_once: true
