--- a/kubernetes/templates/kuard/demo-deployment.yml
+++ b/kubernetes/templates/kuard/demo-deployment.yml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: kuard
+  namespace: '{{ namespace}}'
 spec:
   selector:
     matchLabels:
@@ -20,11 +21,11 @@ spec:
         - containerPort: 8080
 
 ---
-
 apiVersion: v1
 kind: Service
 metadata:
   name: kuard
+  namespace: '{{ namespace}}'
 spec:
   ports:
   - port: 80
@@ -32,4 +33,3 @@ spec:
     protocol: TCP
   selector:
     app: kuard
-
